feat: intermediate step for adding topojson data
